...
        app:layout_constraintTop_toTopOf="parent"

        app:startIconContentDescription="Recipe name"
        app:startIconDrawable="@drawable/ic_food">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogIngredientNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogIngredientQuantityLayout"
...
        android:hint="@string/qty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogIngredientQuantityTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
