...
    <string name="choose_language">Choose language</string>
    <string name="log_out">Log out</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="cancel">Cancel</string>
    <string name="add_instruction">Add instruction</string>
    <string name="rate">rate</string>
    <string name="error_add_recipe">Error Add Recipe</string>
    <string name="error_add_recipe_text">Your recipe doesn\'t have the minimum for it to be created. Check each tab!</string>
    <string name="ok">Ok</string>
    <string name="exit_add_recipe">Cancel add recipe</string>
    <string name="exit_add_recipe_message">Are you sure you want to cancel this process? All your progress will be lost.</string>

</resources>

