...
    tools:context=".View.Fragments.AddRecipeIngredientsFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/recipe_ingredients"
        app:layout_constraintBottom_toTopOf="@+id/add_ingredients_recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_ingredients_floatingButton"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@+id/add_ingredients_guideline2"
...
